# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: models.py  views.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/tasks/: models.py  views.py
task_manager/templates/: base.html  index.html  navbar.html
task_manager/templates/labels/: create.html  update.html
task_manager/templates/statuses/: create.html  update.html
task_manager/templates/tasks/: create.html  show.html  update.html
task_manager/templates/users/: update.html  users.html
task_manager/users/: models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
